--- a/style.css
+++ b/style.css
@@ -1,105 +1,156 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 /* common desing */
-body{
-    max-width: 1600px;
+body {
+  /* max-width: 1600px; */
 }
 .inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
- .btn{
-    color: white;
-    background-color: #469165;
-    font-size: 16px;
-    font-weight: 600;
-    padding: 12px 16px;
-    border: none;
-    border-radius: 5px;
- }
+.btn {
+  color: white;
+  background-color: #469165;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 12px 16px;
+  border: none;
+  border-radius: 5px;
+}
 /*  end common desing */
-.navigation{
-    padding: 16px 120px;
+.navigation {
+  padding: 16px 120px;
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  align-items: center;
+}
+.nav-image {
+  width: 139px;
+  height: 60px;
+}
+.nav-list {
+  & ul {
+    list-style: none;
     display: flex;
-    justify-content: space-between;
-    background: white;
-    align-items: center;
-}
-.nav-image{
-    width: 139px;
-    height: 60px;
-}
-.nav-list{
-    & ul{
-        list-style: none;
-        display: flex;
-        gap: 32px;
-
-    }
-    & ul li a{
-        text-decoration: none;
-        color: #000000;
-        font-size: 16px;
-
-
-    }
+    gap: 32px;
+  }
+  & ul li a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 16px;
+  }
 }
 
-.hero{
-    background-image: url("image/hero-bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 674px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.hero {
+  background-image: url("image/hero-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 674px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.hero-text{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    & h3{
-        margin-top: 16px;
-        color: white;
-        font-size: 72px;
-       font-weight: bold;
-    }
-    & h2{
-        color: #30B868;
-        font-weight: bold;
-        font-size: 72px;
-    }
-    & p{
-        margin-top: 16px;
-        font-size: 18px;
-        color: white;
-    }
+.hero-text {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  & h3 {
+    margin-top: 16px;
+    color: white;
+    font-size: 72px;
+    font-weight: bold;
+  }
+  & h2 {
+    color: #30b868;
+    font-weight: bold;
+    font-size: 72px;
+  }
+  & p {
+    margin-top: 16px;
+    font-size: 18px;
+    color: white;
+  }
 }
-.hero-buttons{
-    margin-top: 32px;
-    display: flex;
-    align-items: center;
-    gap: 16px;
-   & .hero-btn2{
+.hero-buttons {
+  margin-top: 32px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  & .hero-btn2 {
     background: none;
     border: 1px solid white;
-   } 
+  }
 }
-.hero-text-top{
-    padding: 8px 12px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 1000px;
-    & h4{
-        color: #469165;
+.hero-text-top {
+  padding: 8px 12px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 1000px;
+  & h4 {
+    color: #469165;
+  }
+}
+/* cards section desing */
+.cards-section {
+  padding-top: 115px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.note {
+  text-align: center;
+  & h2 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #001931;
+  }
+  & p {
+    margin-top: 16px;
+    color: #627382;
+  }
+}
 
-    }
+.cards {
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  gap: 24px;
+}
+.card {
+  padding: 70px 24px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 0px #0000000f;
+  & .image-div {
+    background: #f95555;
+    border-radius: 100%;
+    padding: 13px;
+  }
+  & .image-div img {
+    width: 32px;
+    height: 32px;
+  }
+  & h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #001931;
+  }
+  & p {
+    color: #627382;
+    font-size: 16px;
+    width: 65%;
+  }
 }
