--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 /* common desing */
 body {
-  /* max-width: 1600px; */
+  max-width: 1600px;
+  margin: 0 auto;
 }
 .inter-font {
   font-family: "Inter", sans-serif;
@@ -161,6 +162,7 @@ body {
   padding: 120px;
   justify-content: space-around;
   align-items: center;
+
 }
 .brain-image {
   width: 600px;
@@ -208,5 +210,48 @@ body {
     color: #001931;
     font-size: 16px;
     font-weight: 500; 
+  }
+}
+
+/* Get Early Access section desing  */
+.early-access{
+  background-color: #F7F6F2;
+  width: 80%;
+  margin: 120px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0px;
+  text-align: center;
+  & h2{
+    color: #001931;
+    font-size: 40px;
+    font-weight: bold;
+  }
+  & p{
+    color: #627382;
+    font-size: 16px;
+    line-height: 24px;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 16px;
+  }
+  & button{
+    margin-top: 24px;
+
+  }
+  & .early-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 16px;
+
+
+  }
+  & .early-link a{
+    text-decoration: none;
+    font-size:16px ;
+    color: #627382;
   }
 }
