--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@
   padding: 12px 16px;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover{
+   background-color: #3a7dc9;
+    border-radius: 30px;
+     transition: all 0.3s ease-in-out ;
+    
 }
 /*  end common desing */
 .navigation {
@@ -43,6 +50,12 @@
     text-decoration: none;
     color: #000000;
     font-size: 16px;
+    
+  }
+  & ul li a:hover{
+     color: #103bc9;
+     font-size: 20px;
+     transition: all 0.3s ease-in-out ;
   }
 }
 
@@ -126,6 +139,7 @@
   /* flex-wrap: wrap; */
   justify-content: center;
   gap: 24px;
+  padding: 44px 120px;
 }
 .card {
   padding: 70px 24px;
@@ -136,6 +150,7 @@
   text-align: center;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 0px #0000000f;
+  cursor: pointer;
   & .image-div {
     background: #f95555;
     border-radius: 100%;
@@ -155,6 +170,11 @@
     font-size: 16px;
     width: 65%;
   }
+}
+.card:hover{
+  box-shadow: 10px 10px 10px 10px #0000000f;
+  transform: scale(1.01);
+   transition: all 0.3s ease-in-out ;
 }
 
 /* brain section style  */
@@ -255,6 +275,11 @@
     font-size:16px ;
     color: #627382;
   }
+  & .early-link a:hover{
+    font-size:20px ;
+     transition: all 0.3s ease-in-out ;
+
+  }
 }
 /* footer section desing  */
 footer{
@@ -291,6 +316,11 @@ footer{
     padding: 5px;
     border-radius: 50%;
     cursor: pointer;
+  }
+  & .social-icon-div i:hover{
+    background-color: black;
+    color: white;
+     transition: all 0.3s ease-in-out ;
   }
 }
 .footer-copywrite{
